--- a/sfm-jdbc/pom.xml
+++ b/sfm-jdbc/pom.xml
@@ -1,240 +1,443 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<artifactId>sfm-jdbc</artifactId>
-	<packaging>bundle</packaging>
-
-	<parent>
-		<groupId>org.simpleflatmapper</groupId>
-		<artifactId>sfm-parent</artifactId>
-		<version>8.0.4-SNAPSHOT</version>
-	</parent>
-
-	<name>sfm-jdbc</name>
-	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
-
-	<developers>
-		<developer>
-			<id>arnaudroger</id>
-			<name>Arnaud Roger</name>
-			<email>arnaud.roger@gmail.com</email>
-		</developer>
-	</developers>
-
-	<licenses>
-		<license>
-			<name>The MIT License (MIT)</name>
-			<url>http://opensource.org/licenses/MIT</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-
-	<dependencies>
-
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-map</artifactId>
-			<version>8.0.4-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>javax.persistence</artifactId>
-			<version>2.2.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-test</artifactId>
-			<version>8.0.4-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-map</artifactId>
-			<version>8.0.4-SNAPSHOT</version>
-			<scope>test</scope>
-			<classifier>tests</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-tuples</artifactId>
-			<version>8.0.4-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-converter-joda-time</artifactId>
-			<version>8.0.4-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-
-<!--		<dependency>-->
-<!--			<groupId>issue</groupId>-->
-<!--			<artifactId>issue653</artifactId>-->
-<!--			<version>0.0.1</version>-->
-<!--			<scope>system</scope>-->
-<!--			<systemPath>-->
-<!--				/Users/aroger/dev/github/SimpleFlatMapper/sfm-jdbc/src/test/resources/issue653/opensesame.jar-->
-<!--			</systemPath>-->
-<!--		</dependency>-->
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Export-Package>org.simpleflatmapper.jdbc,org.simpleflatmapper.jdbc.named</Export-Package>
-						<Import-Package>com.mysql;resolution:=optional,org.simpleflatmapper.*</Import-Package>
-					</instructions>
-					<archive>
-						<manifestEntries>
-							<Automatic-Module-Name>org.simpleflatmapper.jdbc</Automatic-Module-Name>
-						</manifestEntries>
-					</archive>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.pitest</groupId>
-				<artifactId>pitest-maven</artifactId>
-				<version>1.1.9</version>
-				<configuration>
-					<targetClasses>
-						<param>org.sfm.*</param>
-					</targetClasses>
-					<targetTests>
-						<param>org.sfm.*</param>
-					</targetTests>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<profiles>
-		<profile>
-			<id>travis</id>
-			<activation>
-				<property>
-					<name>env.TRAVIS</name>
-					<value>true</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk16</id>
-			<activation>
-				<jdk>1.6</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>com.google.code.maven-replacer-plugin</groupId>
-						<artifactId>replacer</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-			<dependencies>
-				<dependency>
-					<groupId>org.eclipse.persistence</groupId>
-					<artifactId>javax.persistence</artifactId>
-					<version>2.1.1</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-		<profile>
-			<id>jdk17</id>
-			<activation>
-				<jdk>1.7</jdk>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>com.boundary</groupId>
-					<artifactId>fasttuple-core</artifactId>
-					<version>0.1</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.eclipse.persistence</groupId>
-					<artifactId>javax.persistence</artifactId>
-					<version>2.1.1</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>com.google.code.maven-replacer-plugin</groupId>
-						<artifactId>replacer</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-
-		<profile>
-			<id>jdk19</id>
-			<activation>
-				<jdk>[9,12]</jdk>
-			</activation>
-
-			<build>
-				<plugins>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-
-						<configuration>
-							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens org.simpleflatmapper.jdbc/org.simpleflatmapper.jdbc.test=org.simpleflatmapper.reflect
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    	
+    <modelVersion>4.0.0</modelVersion>
+    	
+    <artifactId>sfm-jdbc-jre9</artifactId>
+    	
+    <packaging>bundle</packaging>
+    	
+    <parent>
+        		
+        <groupId>org.simpleflatmapper</groupId>
+        		
+        <artifactId>sfm-parent-jre9</artifactId>
+        		
+        <version>8.0.4-SNAPSHOT</version>
+        	
+    </parent>
+    	
+    <name>sfm-jdbc</name>
+    	
+    <description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
+    	
+    <developers>
+        		
+        <developer>
+            			
+            <id>arnaudroger</id>
+            			
+            <name>Arnaud Roger</name>
+            			
+            <email>arnaud.roger@gmail.com</email>
+            		
+        </developer>
+        	
+    </developers>
+    	
+    <licenses>
+        		
+        <license>
+            			
+            <name>The MIT License (MIT)</name>
+            			
+            <url>http://opensource.org/licenses/MIT</url>
+            			
+            <distribution>repo</distribution>
+            		
+        </license>
+        	
+    </licenses>
+    	
+    <dependencies>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-map-jre9</artifactId>
+            			
+            <version>8.0.4-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>joda-time</groupId>
+            			
+            <artifactId>joda-time</artifactId>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.eclipse.persistence</groupId>
+            			
+            <artifactId>javax.persistence</artifactId>
+            			
+            <version>2.2.0</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-test-jre9</artifactId>
+            			
+            <version>8.0.4-SNAPSHOT</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-map-jre9</artifactId>
+            			
+            <version>8.0.4-SNAPSHOT</version>
+            			
+            <scope>test</scope>
+            			
+            <classifier>tests</classifier>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-tuples-jre9</artifactId>
+            			
+            <version>8.0.4-SNAPSHOT</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-converter-joda-time-jre9</artifactId>
+            			
+            <version>8.0.4-SNAPSHOT</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        
+        <!--		<dependency>-->
+        
+        <!--			<groupId>issue</groupId>-->
+        
+        <!--			<artifactId>issue653</artifactId>-->
+        
+        <!--			<version>0.0.1</version>-->
+        
+        <!--			<scope>system</scope>-->
+        
+        <!--			<systemPath>-->
+        
+        <!--				/Users/aroger/dev/github/SimpleFlatMapper/sfm-jdbc/src/test/resources/issue653/opensesame.jar-->
+        
+        <!--			</systemPath>-->
+        
+        <!--		</dependency>-->
+        	
+    </dependencies>
+    	
+    <build>
+        		
+        <plugins>
+            			
+            <plugin>
+                				
+                <groupId>org.apache.felix</groupId>
+                				
+                <artifactId>maven-bundle-plugin</artifactId>
+                				
+                <extensions>true</extensions>
+                				
+                <configuration>
+                    					
+                    <instructions>
+                        						
+                        <Export-Package>org.simpleflatmapper.jdbc,org.simpleflatmapper.jdbc.named</Export-Package>
+                        						
+                        <Import-Package>com.mysql;resolution:=optional,org.simpleflatmapper.*</Import-Package>
+                        					
+                    </instructions>
+                    					
+                    <archive>
+                        						
+                        <manifestEntries>
+                            							
+                            <Automatic-Module-Name>org.simpleflatmapper.jdbc</Automatic-Module-Name>
+                            						
+                        </manifestEntries>
+                        					
+                    </archive>
+                    				
+                </configuration>
+                			
+            </plugin>
+            			
+            <plugin>
+                				
+                <groupId>org.apache.maven.plugins</groupId>
+                				
+                <artifactId>maven-jar-plugin</artifactId>
+                				
+                <version>2.4</version>
+                				
+                <executions>
+                    					
+                    <execution>
+                        						
+                        <goals>
+                            							
+                            <goal>test-jar</goal>
+                            						
+                        </goals>
+                        					
+                    </execution>
+                    				
+                </executions>
+                			
+            </plugin>
+            			
+            <plugin>
+                				
+                <groupId>org.pitest</groupId>
+                				
+                <artifactId>pitest-maven</artifactId>
+                				
+                <version>1.1.9</version>
+                				
+                <configuration>
+                    					
+                    <targetClasses>
+                        						
+                        <param>org.sfm.*</param>
+                        					
+                    </targetClasses>
+                    					
+                    <targetTests>
+                        						
+                        <param>org.sfm.*</param>
+                        					
+                    </targetTests>
+                    				
+                </configuration>
+                			
+            </plugin>
+            		
+        </plugins>
+        	
+    </build>
+    	
+    <profiles>
+        		
+        <profile>
+            			
+            <id>travis</id>
+            			
+            <activation>
+                				
+                <property>
+                    					
+                    <name>env.TRAVIS</name>
+                    					
+                    <value>true</value>
+                    				
+                </property>
+                			
+            </activation>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.jacoco</groupId>
+                        						
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk16</id>
+            			
+            <activation>
+                				
+                <jdk>1.6</jdk>
+                			
+            </activation>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        					
+                    </plugin>
+                    					
+                    <plugin>
+                        						
+                        <groupId>com.google.code.maven-replacer-plugin</groupId>
+                        						
+                        <artifactId>replacer</artifactId>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            			
+            <dependencies>
+                				
+                <dependency>
+                    					
+                    <groupId>org.eclipse.persistence</groupId>
+                    					
+                    <artifactId>javax.persistence</artifactId>
+                    					
+                    <version>2.1.1</version>
+                    					
+                    <scope>test</scope>
+                    				
+                </dependency>
+                			
+            </dependencies>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk17</id>
+            			
+            <activation>
+                				
+                <jdk>1.7</jdk>
+                			
+            </activation>
+            			
+            <dependencies>
+                				
+                <dependency>
+                    					
+                    <groupId>com.boundary</groupId>
+                    					
+                    <artifactId>fasttuple-core</artifactId>
+                    					
+                    <version>0.1</version>
+                    					
+                    <optional>true</optional>
+                    					
+                    <scope>test</scope>
+                    				
+                </dependency>
+                				
+                <dependency>
+                    					
+                    <groupId>org.eclipse.persistence</groupId>
+                    					
+                    <artifactId>javax.persistence</artifactId>
+                    					
+                    <version>2.1.1</version>
+                    					
+                    <scope>test</scope>
+                    				
+                </dependency>
+                			
+            </dependencies>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        					
+                    </plugin>
+                    					
+                    <plugin>
+                        						
+                        <groupId>com.google.code.maven-replacer-plugin</groupId>
+                        						
+                        <artifactId>replacer</artifactId>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk19</id>
+            			
+            <activation>
+                				
+                <jdk>[9,12]</jdk>
+                			
+            </activation>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        						
+                        <configuration>
+                            							
+                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens org.simpleflatmapper.jdbc/org.simpleflatmapper.jdbc.test=org.simpleflatmapper.reflect
 								--add-opens org.simpleflatmapper.map/org.simpleflatmapper.map.mapper=org.simpleflatmapper.jdbc
 							</argLine>
-							<excludes>
-								<exclude>org.simpleflatmapper.jdbc.test.AliasProviderTest</exclude>
-							</excludes>
-						</configuration>
-					</plugin>
-				</plugins>
-
-			</build>
-		</profile>
-
-	</profiles>
+                            							
+                            <excludes>
+                                								
+                                <exclude>org.simpleflatmapper.jdbc.test.AliasProviderTest</exclude>
+                                							
+                            </excludes>
+                            						
+                        </configuration>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        	
+    </profiles>
+    
 </project>
