--- a/sfm-reflect/pom.xml
+++ b/sfm-reflect/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>8.0.4-SNAPSHOT</version>
+		<version>8.1.0</version>
 	</parent>
 
 	<name>sfm-reflect</name>
@@ -38,23 +38,23 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-util</artifactId>
-			<version>8.0.4-SNAPSHOT</version>
+			<version>8.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter</artifactId>
-			<version>8.0.4-SNAPSHOT</version>
+			<version>8.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>8.0.4-SNAPSHOT</version>
+			<version>8.1.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
-			<version>8.0.4-SNAPSHOT</version>
+			<version>8.1.0</version>
 			<scope>test</scope>
 		</dependency>
 
