--- a/sfm-test-proto/pom.xml
+++ b/sfm-test-proto/pom.xml
@@ -1,61 +1,103 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>org.simpleflatmapper</groupId>
-	<artifactId>sfm-test-proto</artifactId>
-	<packaging>jar</packaging>
-
-	<version>8.1.0-SNAPSHOT</version>
-
-	<licenses>
-		<license>
-			<name>The MIT License (MIT)</name>
-			<url>http://opensource.org/licenses/MIT</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<useIncrementalCompilation>false</useIncrementalCompilation>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-csv</artifactId>
-			<version>8.1.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-converter-protobuf</artifactId>
-			<version>8.1.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java</artifactId>
-			<version>3.3.1</version>
-			<scope>test</scope>
-		</dependency>
-
-	</dependencies>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    	
+    <modelVersion>4.0.0</modelVersion>
+    	
+    <groupId>org.simpleflatmapper</groupId>
+    	
+    <artifactId>sfm-test-proto-jre9</artifactId>
+    	
+    <packaging>jar</packaging>
+    	
+    <version>8.1.0-SNAPSHOT</version>
+    	
+    <licenses>
+        		
+        <license>
+            			
+            <name>The MIT License (MIT)</name>
+            			
+            <url>http://opensource.org/licenses/MIT</url>
+            			
+            <distribution>repo</distribution>
+            		
+        </license>
+        	
+    </licenses>
+    	
+    <build>
+        		
+        <plugins>
+            			
+            <plugin>
+                				
+                <groupId>org.apache.maven.plugins</groupId>
+                				
+                <artifactId>maven-compiler-plugin</artifactId>
+                				
+                <version>3.5.1</version>
+                				
+                <configuration>
+                    					
+                    <source>1.8</source>
+                    					
+                    <target>1.8</target>
+                    					
+                    <useIncrementalCompilation>false</useIncrementalCompilation>
+                    				
+                </configuration>
+                			
+            </plugin>
+            		
+        </plugins>
+        	
+    </build>
+    	
+    <dependencies>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-csv-jre9</artifactId>
+            			
+            <version>8.1.0-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-converter-protobuf-jre9</artifactId>
+            			
+            <version>8.1.0-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>junit</groupId>
+            			
+            <artifactId>junit</artifactId>
+            			
+            <version>4.12</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>com.google.protobuf</groupId>
+            			
+            <artifactId>protobuf-java</artifactId>
+            			
+            <version>3.3.1</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        	
+    </dependencies>
+    
 </project>
